2009-10-28  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/active-dialog.c, src/active-dialog.h, src/app.c, src/app.h,
	src/cur-proj.h, src/file-io.c, src/file-io.h, src/gconf-io.c,
	src/gconf-io.h, src/idle-dialog.c, src/idle-dialog.h, src/log.c,
	src/main.c, src/menucmd.c/ src/timer.c, src/timer.h: Initial
	changes to use the running-projects module instead of the global
	"cur_proj" variable.

	* src/running-projects.c, src/running-projects.h: Implemented
	module to keep track of the set of running projects.

2009-09-21  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/proj.h, src/proj.c (gtt_project_cmp), src/projects-tree.c:
	moved the project_cmp function from the projects-tree.c to
	the proj.c module.

2009-09-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_visible_columns):
	Check that the column_references tree is not NULL before calling
	g_tree_destroy.

2009-09-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_expander_state):
	return without any further processing if states is NULL.

	* src/file-io.c (gtt_post_ctree_config): don't call
	gtt_projects_tree_set_expander_state when the expander state is
	NULL.

2009-06-29  Goedson Teixeira Paixao  <goedson@debian.org>

	* ghtml/C/gtt.scm: Set unlimited guile stack (Fixes #1402562)

	* src/ghtml.c (gtt_ghtml_new): properly initialize guile
	environment.

2009-05-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml.c (task_get_blocktime_str_scm): substitute the usage
	of the deprecated qof_print_hors_elapsed_buff by our copy of it.

2009-05-09  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Look for qof.pc (libqof2) instead of
	qof-1.pc.

2009-01-02  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/interval_edit.glade: add the DISPLAY_SECONDS flag to the
	start_date field.

2008-11-28  Goedson Teixeira Paixao  <goedson@debian.org>
